# web

./: .gitattributes  .gitignore  .prettierrc  CNAME  CONTRIBUTING.md  Caddyfile  Cargo.toml  LICENSE  LICENSE-GPL  README.md  biome.jsonc  cabal.project  deny.toml  flake.nix  fourmolu.yaml  justfile  package.json  pnpm-lock.yaml  rednoise.cabal  rust-toolchain.toml
.github/workflows/: build-matrix.yml  build.yml  determinate-ci.yml  gh-pages.yml  lock.yml
css/: giscus.css  main.css
cv/: common.typ  index.typ  short.typ
docs/: book.toml
docs/src/: Introduction.md  SUMMARY.md
example/: .gitignore  About.typ  Cargo.toml  Index.typ
example/routes/: +Index.typ
example/src/: main.rs
nix/: treefmt.nix
notes/: y-combinator.typ
posts/hacking/: anatomy-of-a-nixos-module.typ  doing-web-development-in-typst.typ  parallelizing-this-website-for-free.typ  reading-chinese-on-kindle-scribe.typ
posts/math/: computability-and-incompleteness.typ  from-computability-to-incompleteness.typ  three-isomorphism-theorems.typ  universal-constructions.typ
posts/misc/: transferring.typ
posts/notes/: eckmann-hilton-cn.typ  (+1 more)
public/: style.css
root/: 404.typ  about-this-site.typ  about.typ  accessibility.typ  acknowledgements.typ  buttons.typ  charts.typ  colophon.typ  computing.typ  essays.typ  faqs.typ  impressum.typ  index.typ  licensing.typ  now.typ  photos.typ  privacy.typ  projects.typ  transcript.typ  unicode-quotes.typ
routes/: +404.typ  +Impressum.typ  +Index.typ  +Luminite.typ  +Math-Test.typ  +Math-test.typ  +about-this-site.typ  +about.typ  +accessibility.typ  +acknowledgements.typ  +buttons.typ  +charts.typ  +colophon.typ  +computing.typ  +cv.typ  +essays.typ  +faqs.typ  +hypermedia-and-the-insanity-of-the-web.typ  +impressum.typ  +index.typ  +licensing.typ  +luminite.typ  +math-test.typ  +now.typ  +parallelizing-this-website-for-free.typ  +photos.typ  +privacy.typ  +probability-theory.typ  +projects.typ  +redirect__resume  +the-web-is-insane.typ  +tools.typ  +transcript.typ  +unicode-quotes.typ  cv.typ
src/: BlazeSupport.hs  Compilers.hs  Constants.hs  Main.hs  Templates.hs  Types.hs  Utils.hs  lib.rs  main.rs  site.rs  templating.rs  world.rs
tests/: compiles_successfully.rs  templates.rs
web/: README.md  icons.ts  index.ts  package.json  pnpm-lock.yaml  rolldown.config.ts  rollup.config.mjs
web-components/: icons.ts  package.json  pnpm-lock.yaml  rolldown.config.ts
(+47 files in other folders)
