[package]
name = "luminite"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hypertext = "0.6"
tracing-subscriber = "0.3"
tracing = "0.1"
dircpy = "0.3"

[[bin]]
name = "site"
