[package]
name = "luminite"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hypertext = "0.6"
tracing-subscriber = "0.3"
tracing = "0.1"
dircpy = "0.3"
minify-html-onepass = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = [
  "serde",
  "parsing",
  "formatting",
  "macros",
] }
compile-time = "0.2"
rayon = "1.10"

[[bin]]
name = "site"
